styles/base.css
html{
	background: url("../images/woodback.jpg") no-repeat fixed center;
}
header{
	border-bottom: 3px solid #022801;
	border-top: 3px solid #022801;
	padding-bottom: 3px;
}
nav{
	width: 70%;
	position: absolute; top: -5px; right: 8px; z-index: 1;
}
#nav_bar ul{
	list-style: none;
	padding: 2em 0;
	background-color: #555C4A;
	text-align: center;
}
#nav_bar li{
	display: inline;
}
#nav_bar a{
	padding: 2em 2em;
	color: black;
	font-weight: bold;
	text-decoration: none;
	letter-spacing: 1px;
	color: #E8DED5;
}
a:hover{
	background-color: #022801;
}
body{
	font-family: Arial, Helvetica, sans-serif;
	background-color: #FAFAD2;
}
footer{
	border: 1px;
	background-color: #075702;
	color: black;
	clear: left;
	color: #E8DED5;
	margin-top: 25px;
}
#slideshow{
	margin-top: 10px;
}
.list{
	font-weight: bold !important;
	font-size: 120%;
	opacity: 50%;
}
dd{
	font-size: 100%;
	line-height: 20px;
}
dt{
	font-size: 110%;
	font-weight: lighter;
}
.content{
	-webkit-columns: 200px 2; /* Safari and Chrome */
	-moz-columns: 200px 2; /* Firefox */
}
#testimonial{
	text-align: justify;
	padding-left: 6px;
	padding-right: 6px;
}
.names{
	text-align:right;
	font-size: 106%;
}
table{
	border: 1px solid black;
	border-collapse: collapse;
	margin-left: 30%;
	margin-right: 30%;
}
th, td{
	border:1px solid black;
	padding: .2em .7em;
	text-align: right;
}
th.left, td.left{
	text-align: left;
}
#about{
	margin-top: 50px;
	text-align:center;
}

